Inits version 6.0.0.